--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         <div id="leftDiv">
             <p id="Intro">
                 3rd Year B.Tech CSE Student at VIT Vellore <br>
-                Skilled in Python, Java, JavaScript, C, C++, HTML, CSS <br>
+                Learning Python, Java, JavaScript, C, C++, HTML, CSS <br>
                 Currently focused on mastering DSA and exploring the basics of AI/ML <br>
-                Familiar with Git, basic GUI development, and experimenting with Chrome Extensions
+                Familiar with Git, basic GUI development, and experimenting with Chrome Extensions <br>
+                Languages Spoken: English, Hindi, and currently learning Japanese (preparing for JLPT N5) <br>
 
             </p>
         </div>
@@ -89,21 +90,21 @@
     </div>
 
     <div class="About" id="About">
-        <h2 class="text-center my-4 text-light" id="about-me-heading" data-aos="fade-up-left">Little About Me</h2>
+        <h2 class="text-center my-4 text-light" id="about-me-heading" data-aos="fade-up-left">About Me</h2>
         <div id="content">
             <div id="imgContainer">
                 <img src="imagees/Me.jpg" alt="Me">
             </div>
             <div id="Txt-container">
                 <p id="About-text" data-aos="fade-up-left">
-                    Hi, I’m Yogendra — a developer who learns by building.
+                    Hi, I’m Yogendra a developer who learns by building.
 
                     I’m currently pursuing Computer Science at VIT Vellore, where I’ve been diving deep into development
-                    and problem-solving. From writing CLI tools to building browser extensions and UIs, I like
+                    and problem solving. From writing CLI tools to building browser extensions and UIs, I like
                     experimenting, improving, and figuring things out on my own.
 
                     I’m strengthening my DSA fundamentals and slowly moving toward AI/ML to understand the bigger
-                    picture in tech. I believe growth comes through consistency, curiosity, and just showing up — one
+                    picture in tech. I believe growth comes through consistency, curiosity, and just showing up one
                     project, one bug, and one solution at a time.
 
                     If you're building something meaningful, I’d love to be a part of it.
@@ -111,7 +112,6 @@
             </div>
         </div>
     </div>
-    <hr>
     <div class="Projects" id="Projects">
         <section id="projects">
             <h2 class="text-center my-4 text-light" id="my-project-heading" data-aos="fade-up-right">My Projects</h2>
@@ -189,7 +189,7 @@
         <div class="row">
             <div class="social-links">
                 <a href="https://github.com/Yogendra2804"><i class="fab fa-github"></i></a>
-                <a href="www.linkedin.com/in/yogendra-gupta-123b0028a"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/yogendra-gupta-123b0028a"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.instagram.com/yogendragupta845/"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
