--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yogendra's Portfolio</title>
     <!-- Page Tab Logoo -->
-    <link rel="icon" type="image/png" href="imagees/favicon.png">
+    <link rel="icon" type="image/png" href="imagees/Me.jpg">
 
     <!-- Bootstrap & Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -32,9 +32,9 @@
             </div>
 
             <nav id="nav-menu">
-                <a class="navbar" href="#Home">Home</a>
-                <a class="navbar" href="#Projects">Projects</a>
+                <a class="navbar" href="#Intro">Home</a>
                 <a class="navbar" href="#About">About</a>
+                <a class="navbar" href="#Projects">Projects</a>
                 <a class="navbar" href="#Contact">Contact</a>
             </nav>
 
@@ -54,12 +54,17 @@
     <div class="Home">
         <div id="leftDiv">
             <p id="Intro">
-                3rd Year B.Tech CSE Student at VIT Vellore <br>
-                Learning Python, Java, JavaScript, C, C++, HTML, CSS <br>
-                Currently focused on mastering DSA and exploring the basics of AI/ML <br>
-                Familiar with Git, basic GUI development, and experimenting with Chrome Extensions <br>
-                Languages Spoken: English, Hindi, and currently learning Japanese (preparing for JLPT N5) <br>
+                3rd Year B.Tech CSE Student at VIT Vellore <br> 
 
+                Learning Python, Java, JavaScript, C, C++, HTML, CSS <br> 
+
+                Currently focused on mastering DSA and exploring the basics of AI/ML <br> 
+
+                Familiar with Git, basic GUI development, and experimenting with Chrome Extensions <br> 
+
+                Languages Spoken: English, Hindi, and currently learning Japanese (preparing for JLPT N5) <br> 
+
+ 
             </p>
         </div>
         <div id="rightDiv" data-aos="fade-left">
@@ -100,7 +105,7 @@
                     Hi, I’m Yogendra a developer who learns by building.
 
                     I’m currently pursuing Computer Science at VIT Vellore, where I’ve been diving deep into development
-                    and problem solving. From writing CLI tools to building browser extensions and UIs, I like
+                    and problem solving. From writing CLI tools to building browser extensions and UI's, I like
                     experimenting, improving, and figuring things out on my own.
 
                     I’m strengthening my DSA fundamentals and slowly moving toward AI/ML to understand the bigger
@@ -159,7 +164,7 @@
                 </p>
             </div>
             <div id="form" data-aos="zoom-out-right">
-                <form id="contact-form" action="https://formsubmit.co/yogendra.gupta2023@vitstudent.ac.in"
+                <form id="contact-form" aaction="https://formsubmit.co/yogendra.gupta2023@vitstudent.ac.in"
                     method="POST">
                     <input type="hidden" name="_captcha" value="false">
 
