--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yogendra's Portfolio</title>
     <!-- Page Tab Logoo -->
-    <link rel="icon" type="image/png" href="imagees/favicon.png">
+    <link rel="icon" type="image/png" href="imagees/Me.jpg">
 
     <!-- Bootstrap & Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
