--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 </p>
             </div>
             <div id="form" data-aos="zoom-out-right">
-                <form id="contact-form" aaction="https://formsubmit.co/yogendra.gupta2023@vitstudent.ac.in"
+                <form id="contact-form" action="https://formsubmit.co/yogendra.gupta2023@vitstudent.ac.in"
                     method="POST">
                     <input type="hidden" name="_captcha" value="false">
 
@@ -176,7 +176,7 @@
                     <div id="comment">
                         <textarea name="message" id="message" placeholder="Write your message here..."></textarea>
                     </div>
-
+                    <input type="hidden" name="_next" value="https://yogendra2804.github.io/Portfolio/?success#Contact">
                     <button id="submity" type="submit">Send →</button>
 
                     <p id="form-message"
