--- a/index.html
+++ b/index.html
@@ -164,26 +164,31 @@
                 </p>
             </div>
             <div id="form" data-aos="zoom-out-right">
-                <form id="contact-form">
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_subject" value="New Portfolio Message">
-        <input type="hidden" name="_template" value="table">
+               <div id="form" data-aos="zoom-out-right">
+  <form id="contact-form">
+    <!-- FormSubmit Hidden Inputs -->
+    <input type="hidden" name="_captcha" value="false" />
+    <input type="hidden" name="_template" value="table" />
+    <input type="hidden" name="_subject" value="New Portfolio Message from Yogendra's Website" />
 
-        <div id="name">
-            <input type="text" name="name" id="full-name" placeholder="Your Name" required>
-            <input type="email" name="email" id="email" placeholder="Your Email" required>
-        </div>
+    <div id="name">
+      <input type="text" name="name" id="full-name" placeholder="Your Name" />
+      <input type="email" name="email" id="email" placeholder="Your Email" />
+    </div>
 
-        <div id="comment">
-            <textarea name="message" id="message" placeholder="Write your message here..." required></textarea>
-        </div>
+    <div id="comment">
+      <textarea name="message" id="message" placeholder="Write your message here..."></textarea>
+    </div>
 
-        <button id="submity" type="submit">Send →</button>
+    <button id="submity" type="submit">Send →</button>
 
-        <p id="form-message" style="visibility: hidden; color: limegreen; font-weight: bold; margin-top: 10px;">
-            ✅ Message sent successfully!
-        </p>
-    </form>
+    <p id="form-message"
+       style="visibility: hidden; color: limegreen; font-weight: bold; margin-top: 10px;">
+       ✅ Message sent successfully!
+    </p>
+  </form>
+</div>
+
 
             </div>
             <hr>
