--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="social-links">
                 <a href="https://github.com/Yogendra2804"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/yogendra-gupta-123b0028a"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://www.instagram.com/yogendragupta845/"><i class="fab fa-instagram"></i></a>
+<!--                 <a href="https://www.instagram.com/yogendragupta845/"><i class="fab fa-instagram"></i></a> -->
             </div>
         </div>
         <div id="copyright">
